--- a/opdracht3/views/head.ejs
+++ b/opdracht3/views/head.ejs
@@ -3,4 +3,8 @@
   <meta name="viewport" content="width=device-width">
   <title>Boodschappenlijst</title>
   <link rel="stylesheet" href="/css/style.css">
+  <script type="text/javascript">
+    document.createElement('header');
+    document.createElement('main');
+  </script>
 </head>
